# quantum-implicit-qlearning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-cost-estimation.txt
.github/workflows/: ci.yml
configs/: bp_safe_configs.yaml  quantum_iql_hopper.yaml
docs/: Task 10 - Benchmark Analysis.ipynb  Task 3 - State of the art survey.ipynb  Task7 - QuantumValueNetwork.pptx  quantum_simulation_optimization.md  task 1.md
experiments/: ablation_study.py  experiment_utils.py
experiments/benchmark_comparison/: benchmark_comparison.py  eval_videos.py
logs/: nexus_calls.jsonl
reports/hqc_cost_snapshot/: hqc_cost_snapshot.csv  hqc_cost_snapshot.md  recommendation.md
scripts/: analyze_wandb_results.py  architecture_choice.py  estimate_hqc_costs.py  eval_iql.py  qiql_ablation.py  quantum_value_network.py  train_iql.py  train_quantum_iql.py
src/quantum_iql/: __init__.py  buffer.py  config.py  losses.py  networks.py  quantum_config.py  quantum_iql_hopper.yaml  quantum_trainer.py  trainer.py  training_dynamics_cuda.ipynb  utils.py
src/quantum_iql/results/: init_comparison.json  optimiser_benchmark.json  qualitative_eval.json
tests/: test_buffer.py  test_config.py  test_losses.py  test_networks.py  test_quantum_trainer.py  test_quantum_value_network.py  test_trainer.py  test_utils.py
tests/configs/: iql_hopper.yaml
