[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-iql"
version = "0.1.0"
description = "Quantum Implicit Q-Learning — QC810 MSc Quantum Computing, SDU"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "gymnasium[mujoco]>=0.29",
    "minari[all]>=0.5",
    "wandb>=0.17",
    "pennylane>=0.38",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
train-iql = "quantum_iql.train_iql:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
mypy_path = "src"
explicit_package_bases = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = "src.quantum_iql.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"